--- a/index.html
+++ b/index.html
@@ -5,6 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Sketch Runner</title>
+    <meta name="Description" content="Speed up your Sketch workflow" />
+    <meta property="og:url" content="https://sketchrunner.com/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Sketch Runner" />
+    <meta property="og:image" content="https://placehold.it/1200x630" />
+    <meta property="og:description" content="Speed up your Sketch workflow" />
+    <meta property="og:site_name" content="Sketch Runner" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@Sketch_Runner" />
+    <meta name="twitter:creator" content="@Sketch_Runner" />
+    <meta name="twitter:url" content="https://sketchrunner.com/" />
+    <meta name="twitter:title" content="Sketch Runner" />
+    <meta name="twitter:description" content="Speed up your Sketch workflow" />
+    <meta name="twitter:image" content="https://placehold.it/1024x512" />
   <link rel="icon" type="image/png" sizes="32x32" href="/sketchrunner_website/icons-15ce0df4e3cd3ba24663efe197267acb/favicon-32x32.png"><link rel="icon" type="image/png" sizes="192x192" href="/sketchrunner_website/icons-15ce0df4e3cd3ba24663efe197267acb/android-chrome-192x192.png"><link rel="icon" type="image/png" sizes="16x16" href="/sketchrunner_website/icons-15ce0df4e3cd3ba24663efe197267acb/favicon-16x16.png"><link rel="shortcut icon" href="/sketchrunner_website/icons-15ce0df4e3cd3ba24663efe197267acb/favicon.ico"><link href="/sketchrunner_website/style.css" rel="stylesheet"></head>
   <body>
     <div id="app"></div>
